2002-09-18  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/helper/art-utils.c (sp_vpath_from_bpath_closepath): New method,
	borrowed relevant helpers from libart code

	* src/display/nr-arena-shape.c (nr_arena_shape_update): Closeall if filled,
	limit min width to 0.125 instead of cutting it to 0

2002-09-17  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/event-context.c (sp_event_context_destroy): Do not disconnect
	desktop signal, as there is no such
	(sp_event_context_new): Do not connect desktop signal

	* src/draw-context.c (sp_pencil_context_root_handler): Changed grabbing only
	to happen, if pointer is moved button-down. This changed irritating
	double-click total grab problem.
	(sp_pen_context_root_handler): Ditto

	* src/display/nr-arena-group.c (nr_arena_group_update): Multiply
	with group second transformation

	* src/display/nr-arena-group.h: Added child_affine member

	* src/sp-root.c (sp_root_read_attr): Use NRMatrixD for viewbox
	(sp_root_show): Implement, apply viewBox
	(sp_root_bbox): Ditto
	(sp_root_print): Ditto

	* src/sp-item.c (sp_item_i2doc_affine): Apply viewBox

2002-09-16  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/helper/png-write.c (sp_png_get_block_stripe): Helper
	(sp_png_write_rgba): Use striped writer
	(sp_png_write_rgba_striped): New method

	* src/dialogs/export.c (sp_export_get_rows): Renderer
	(sp_export_do_export): Use striped exporter

	* src/file.c: Added <time.h> - Thanks to Masatake for finding it

2002-09-15  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/display/nr-arena-image.c (nr_arena_image_render): Use libnr
	transformed composition methods

	* src/libnr/nr-compose-transform.c: New file

	* src/libnr/nr-compose-transform.h: New file

2002-09-15  Masatake YAMATO  <jet@gyve.org>

	* src/toolbox.c (sp_maintoolbox_drag_data_received): made
	it a static scoped function.
	(sp_maintoolbox_create): Connected sp_maintoolbox_drag_data_received
	to maintoolbox. (glade based version is obsoleted.)
