@@ -17,16 +17,16 @@ static const char preferences_skeleton[] =
 "  </group>\n"
 "\n"
 "  <group id=\"tools\""
-"         style=\"fill:gray;fill-opacity:1;fill-rule:evenodd;\n"
+"         style=\"fill:gray;fill-opacity:1;\n"
 "                 stroke:black;stroke-opacity:1;stroke-width:1pt;stroke-linejoin:miter;stroke-linecap:butt;\">\n"
-"    <group id=\"shapes\" style=\"stroke:none;\">\n"
+"    <group id=\"shapes\" style=\"fill-rule:evenodd;stroke:none;\">\n"
 "      <eventcontext id=\"rect\"/>\n"
 "      <eventcontext id=\"arc\"/>\n"
 "      <eventcontext id=\"star\" magnitude=\"5\"/>\n"
 "      <eventcontext id=\"spiral\" style=\"fill:none;stroke:black;\"/>\n"
 "    </group>\n"
 "    <group id=\"freehand\""
-"         style=\"fill:none;stroke:black;stroke-opacity:1;stroke-width:1pt;stroke-linejoin:miter;stroke-linecap:butt;\">\n"
+"         style=\"fill:none;fill-rule:evenodd;stroke:black;stroke-opacity:1;stroke-width:1pt;stroke-linejoin:miter;stroke-linecap:butt;\">\n"
 "      <eventcontext id=\"pencil\"/>\n"
 "      <eventcontext id=\"pen\" mode=\"drag\"/>\n"
 "    </group>\n"
